--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
         <title>Nim Game</title>
     </head>
     <body>
-            
+        <h1>NIM: The Game</h1>
+
+        <table border="2">
+            <tr>
+                <td bgcolor="grey">Single/Multiplayer</td>
+                <td bgcolor="grey">Dificulty</td>
+                <td bgcolor="grey">ID</td>
+            </tr>
+            <tr>
+                <td colspan="3">NIM Game<br /></td>
+            </tr>
+        </table>
     </body>
 </html>
