--- a/index.html
+++ b/index.html
@@ -8,13 +8,27 @@
         <title>Nim Game</title>
     </head>
     <body>
-        <h1>NIM: The Game</h1>
+        <h1 align="center">NIM: The Game</h1>
 
-        <table border="2">
+        <table border="2" align="center">
             <tr>
-                <td bgcolor="grey">Single/Multiplayer</td>
-                <td bgcolor="grey">Dificulty</td>
-                <td bgcolor="grey">ID</td>
+                <td bgcolor="grey">
+                    <h3 align="center"> Game Mode </h3>
+                    <input type="radio" name="gamemode" value="singleplayer" /> Singleplayer <br />
+                    <input type="radio" name="gamemode" value="multiplayer" /> Multiplayer <br />
+                </td>
+                <td bgcolor="grey">
+                    <h3 align="center"> Dificulty </h3>
+                    <input type="radio" name="dificulty" value="easy" /> Easy <br />
+                    <input type="radio" name="dificulty" value="normal" /> Normal <br />
+                    <input type="radio" name="dificulty" value="hard" /> Hard <br />
+                    <input type="radio" name="dificulty" value="impossible" /> Impossible <br />
+                </td>
+                <td bgcolor="grey">
+                    <h3 align="center"> Login </h3>
+                    Username:<input type="text" name="username" align="right"/><br />
+                    Password: <input type="password" name="password" align="right"/><br />
+                </td>
             </tr>
             <tr>
                 <td colspan="3">NIM Game<br /></td>
