adicionado um todo temporario

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
         <title>Nim Game</title>
     </head>
     <body>
-            
+        <img src="images/HRLogo.png" class="title" alt="NIM GAME"></img>
+        <div class="elements">
+            <div>
+                <h2 class="subtitle">Game Mode</h2>
+            </div>
+        </div>
     </body>
 </html>
