--- a/index.html
+++ b/index.html
@@ -102,12 +102,43 @@
                         <input type="submit" value="Submit Settings">
                     </form>
                 </div>
-
                 <div class="game">
                     <h2>Game Board</h2>
                     <hr>
+                    <!--
+                    <div class="inner_game_piece">
+                        <div class="game_piece" onclick=player_move(0,1) style="cursor: crosshair;"></div>
+                    </div>
+                    <p></p>               
+                    <div class="inner_game_piece">
+                        <div class="game_piece" onclick=player_move(1,1) style="cursor: crosshair;"></div>
+                        <div class="game_piece" onclick=player_move(1,2) style="cursor: crosshair;"></div>
+                        <div class="game_piece" onclick=player_move(1,3) style="cursor: crosshair;"></div>
+                    </div>
+                    <p></p>
+                    <div class="inner_game_piece">
+                        <div class="game_piece" onclick=player_move(2,1) style="cursor: crosshair;"></div>
+                        <div class="game_piece" onclick=player_move(2,2) style="cursor: crosshair;"></div>
+                        <div class="game_piece" onclick=player_move(2,3) style="cursor: crosshair;"></div>
+                        <div class="game_piece" onclick=player_move(2,4) style="cursor: crosshair;"></div>
+                        <div class="game_piece" onclick=player_move(2,5) style="cursor: crosshair;"></div>
+                    </div>
+                    <p></p>
+                    <div class="inner_game_piece">
+                        <div class="game_piece" onclick=player_move(3,1) style="cursor: crosshair;"></div>
+                        <div class="game_piece" onclick=player_move(3,2) style="cursor: crosshair;"></div>
+                        <div class="game_piece" onclick=player_move(3,3) style="cursor: crosshair;"></div>
+                        <div class="game_piece" onclick=player_move(3,4) style="cursor: crosshair;"></div>
+                        <div class="game_piece" onclick=player_move(3,5) style="cursor: crosshair;"></div>
+                        <div class="game_piece" onclick=player_move(3,6) style="cursor: crosshair;"></div>
+                        <div class="game_piece" onclick=player_move(3,7) style="cursor: crosshair;"></div>
+                    </div>
+                    -->
+                    <script src="script.js"></script>
+                    <hr>
+                    Lacks "new game", "give up" and "end of turn" buttons
                 </div>
-
+                  
                 <div class="leaderboard">
                     <h2>Leaderboards</h2>
                     <hr>
