Updated o design final

--- a/index.html
+++ b/index.html
@@ -99,13 +99,12 @@
                 <div class="game">
                     <h2>Game Board</h2>
                     <hr>
-                    <div class="board"></div>
-                    <script src="script.js"></script>
-                    <hr>
-                    <div class="game_btn">
-                        <button type="reset" onClick="window.location.reload()">New Game / Reset</button>
-                        <button type="button" onClick="endOfTurn()">End Turn</button>
+                    <div class="board">
+                        <script src="script.js"></script>
                     </div>
+                    <hr>
+                    <button type="reset" class="game_btn" onClick="window.location.reload()">New Game</button>
+                    <button type="button" class="game_btn" onClick="endOfTurn()">End Turn</button>
                 </div>
                   
                 <div class="leaderboard">
