Bug-fixing (1/2); Still neither efficient AI nor vertical display

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <label for="easy_diff" class="small_size">Easy</label>
                             <input type="radio" id="easy_diff" value=1 name="diff"><br>
                             <label for="medium_diff" class="small_size">Medium</label>
-                            <input type="radio" id="medium_diff" value=4 name="diff"><br>
+                            <input type="radio" id="medium_diff" value=4 name="diff" checked><br>
                             <label for="hard_diff" class="small_size">Hard</label>
                             <input type="radio" id="hard_diff" value=8 name="diff"><br>
                             <label for="extreme_diff" class="small_size">Extreme</label>
