started fetch communication

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     </div>
                     <div class="game_footing">
                         <hr>
-                        <button type="reset" class="game_btn" onClick="window.location.reload()">New Game</button>
+                        <button type="reset" class="game_btn" onClick="window.location.reload(); action_join()">New Game</button>
                         <!--<button type="button" class="game_btn" onClick="endOfTurn()">End Turn</button>-->
                     </div>
                 </div>
