--- a/index.html
+++ b/index.html
@@ -123,5 +123,6 @@
                 </div>
             </div>
         </div>
+        <script type="module" src="index.js"></script>
     </body>
 </html>
